basic element setup and RxJS import

--- a/bin/index.html
+++ b/bin/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>
 
-<div class="container">
-    <h1 class="fabric">Welcome to fabric</h1>
-    <p>Let's code!</p>
-</div>
+<div id="draggable" class="draggable"></div>
 
 <script src="js/main.js"></script>
 </body>
