install font files

--- a/bin/index.html
+++ b/bin/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-<div id="draggable" class="draggable"></div>
+<div id="draggable" class="draggable">
+  <p>Move me!</p>
+</div>
 
 <script src="js/main.js"></script>
 </body>
